# cpp-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/default/: CMakeLists.txt  chrono_test.cpp  loader_test.cpp  reference_test.cpp  template_test.cpp  vec_test.cpp
code/mng/: CMakeLists.txt
code/mng/src/mng/: engine.cpp  engine.h  main_loop.cpp  main_loop.h  timer.cpp  timer.h
code/mng/test/: main.cpp
code/sdl/: CMakeLists.txt
code/sdl/hello-world/src/: hello-world.cpp
default/: initlist_test.cpp
hello-sdl/: CMakeLists.txt
hello-sdl/src/: hello-sdl.cpp
math/: .gitignore
paranaues/: .gitignore  CMakeLists.txt  const_extends.cpp  loader_test.cpp  smart_ptr_test.cpp  strbuf_test.cpp  vec_test.cpp
paranaues/default/: CMakeLists.txt  const_extends_test.cpp  initlist_test.cpp  moveop_test.cpp  reference_test.cpp  template_test.cpp
paranaues/sdl2/: CMakeLists.txt  smart_ptr.hpp
pong/: .gitignore  CMakeLists.txt
pong/include/mxg/: Renderer.hpp  Size.hpp  Window.hpp  defs.hpp
pong/include/mxg/sdl/: Renderer.hpp  Window.hpp
pong/src/: CMakeLists.txt  main.cpp  utils.hpp
pong/src/mxg/: Renderer.cpp  Size.cpp  Window.cpp
pong/src/mxg/sdl/: Exception.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
pong/test/: CMakeLists.txt  hello_test.cpp  integration.cpp  renderer_test.cpp  window_test.cpp
pong/test/sdl/: renderer_test.cpp  window_test.cpp
sdl/: smartptr_test.cpp
sdl/hello-world/: .gitignore  CMakeLists.txt
sdl/hello-world/src/: hello-world.cpp
sdl/pong/: CMakeLists.txt
sdl/pong/cmake/configs/: compiler.cmake  libs.cmake
sdl/pong/cmake/configs/libs/: catch2.cmake
sdl/pong/include/pong/: Application.hpp
sdl/pong/src/: CMakeLists.txt
sdl/pong/test/: CMakeLists.txt  app_test.cpp
