add_executable(chrono_test chrono_test.cpp)
add_executable(const_extends_test const_extends_test.cpp)
add_executable(initlist_test initlist_test.cpp)
add_executable(loader_test loader_test.cpp)
add_executable(moveop_test moveop_test.cpp)
add_executable(reference_test reference_test.cpp)
add_executable(smart_ptr_test smart_ptr_test.cpp)
add_executable(strbuf_test strbuf_test.cpp)
add_executable(template_test template_test.cpp)
add_executable(vec_test vec_test.cpp)
